[tool.poetry]
name = "coding_challenge"
version = "0.1.0"
description = "Coding Challenge"
authors = ["pogorzem"]

[tool.poetry.dependencies]
python = "~3.8"
pyspark = "3.2.1"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
sklearn = "^0.0"
pandas = "^1.4.1"
numpy = "^1.22.3"
pyarrow = "^7.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"
apache-airflow = "^2.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
